Got virtual robot running a basic auto mode